# Authorization_service

./: .env.template  .env_db  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  makefile  pyproject.toml
.github/workflows/: main.yml
src/: alembic.ini  main.py
src/common/: application.py  settings.py
src/db/: connector.py  declarative.py
src/db/tables/: __init__.py  base.py  user.py
src/dto/schemas/: users.py
src/migrations/: env.py
src/migrations/versions/: 4a57878e0f3c_.py
src/repositories/: user.py  users.py
src/routers/v1/: base_v1.py  users.py
src/services/: user.py
src/utils/: auth.py  enums.py  role_checker.py
tests/: conftest.py  test_users.py
tests/utils/: tokens.py
