[tool.poetry]
name = "authorization-service"
version = "0.1.0"
description = ""
authors = ["Евгений <evgeniy.moiseev.progr@mail.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.8"
sqlalchemy = "^2.0.37"
pydantic = {version = "^2.10.6", extras = ["email"]}
pydantic-settings = "^2.7.1"
alembic = "^1.14.1"
user-agents = "^2.2.0"
pyjwt = "^2.10.1"
uvicorn = "^0.34.0"
passlib = "^1.7.4"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
bcrypt = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
